--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                                 </div>
 
                                     <div class="col-md-6 offset-md-4">
-                                        <button type="submit" class="btn btn-primary" onclick = validform();>
+                                        <button type="button" class="btn btn-primary" onclick = validform();>
                                         Register
                                         </button>
                                     </div>
