--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="json.html">Login</a>
+                <a class="nav-link" href="json.html">View JSON</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Register</a>
