--- a/index.html
+++ b/index.html
@@ -170,6 +170,9 @@
                                         </button>
                                     </div>
                                 </div>
+				<div class="col-md-6 offset-md-4">
+					<h7>Click on<a href="json.html"> view JSON</a> to see the raw data</h7>
+				</div>
                             </form>
                         </div>
                     </div>
