--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 							qualification,
 							occupation,
 							employer ) {
-	firebase.database().ref('test/' + new Date()).set({
+	firebase.database().ref('object/' + new Date()).set({
     name: name,
 	batch: batch,
     email: email,
