--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!------ Include the above in your HEAD tag ---------->
 <!doctype html>
 <html lang="en">
@@ -6,19 +5,13 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	
 	<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 	<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    
 	<!-- Fonts -->
     <link rel="dns-prefetch" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,600" rel="stylesheet" type="text/css">
-
-
-
     <link rel="icon" href="Favicon.png">
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 	<script src="https://www.gstatic.com/firebasejs/5.0.0/firebase.js"></script>
@@ -33,23 +26,8 @@
 	   messagingSenderId: "1074641169948",
 	    appId: "1:1074641169948:web:6b04abd3fd655744deb9d9"
 	  };
-	  firebase.initializeApp(firebaseConfig);
-		var db = firebase.database();
-	   /* Data Event Listeners Start */
-		const preObject = document.getElementById('object');
-		const dbRefObject = db.ref().child('object');
-		dbRefObject.on('value', snap => {
-		console.log(snap.val());	
-		//preObject.innerText = JSON.stringify(snap.val(), null, 3);
- 
-	}, function(error) {
-	  // The fetch failed.
-	  console.error(error);
-	});
-	  
-	//writeUserData("124","name","email","url");
-	  
-	   /* Stop */
+	firebase.initializeApp(firebaseConfig);
+	
 	function writeUserData(name,
 							batch,
 							email,
@@ -75,7 +53,7 @@
 	qualification:qualification,
 	occupation:occupation,
 	employer:employer
-  }, function(error) {
+	}, function(error) {
     if (error) {
       // The write failed...
 		window.alert("Failed!!! Please Try Again");
@@ -84,12 +62,11 @@
 		window.alert("Saved successfully. Thank You");
     }
 	  });
-}
-
+	}
 	</script>
 
-<script>function validform() {
-
+<script>
+		function validform() {
         var a = document.forms["my-form"]["full-name"].value;
         var b = document.forms["my-form"]["email-address"].value;
         var ph = document.forms["my-form"]["phone-number"].value;
@@ -102,8 +79,6 @@
         var spouse = document.forms["my-form"]["spouse-name"].value;
         var occupation = document.forms["my-form"]["Occupation"].value;
         var employer = document.forms["my-form"]["employer"].value;
-
-
         if (a==null || a=="")
         {
             alert("Please Enter Your Full Name");
@@ -122,21 +97,18 @@
             return false;
         }else{
 		writeUserData(a,batch,b,ph,ca,d,marriage,spouse,kids, qualification, occupation, employer);
-		}
+		}}
+	</script>
 
-    }</script>
-
-    <title>JNV Alumni Data</title>
+<title>JNV Alumni Data</title>
 </head>
 <body>
-
 <nav class="navbar navbar-expand-lg navbar-light navbar-laravel">
     <div class="container">
     <a class="navbar-brand" href="#">Alumni Data</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
@@ -146,16 +118,15 @@
                 <a class="nav-link" href="#">Register</a>
             </li>
         </ul>
-
     </div>
     </div>
 </nav>
 
-<main class="my-form">
-    <div class="cotainer">
-        <div class="row justify-content-center">
-            <div class="col-md-8">
-                    <div class="card">
+	<main class="my-form">
+		<div class="cotainer">
+			<div class="row justify-content-center">
+				<div class="col-md-8">
+					<div class="card">
                         <div class="card-header">Fill the details</div>
                         <div class="card-body">
                             <form name="my-form"  action="#" method="post" )">
@@ -251,17 +222,15 @@
                                     </div>
                                 </div>
 								<div class="col-md-6 offset-md-4">
-								<h7>Click on<a href="json.html"> view JSON</a> to see the raw data</h7>
+									<h7>Click on<a href="json.html"> view JSON</a> to see the raw data</h7>
 								</div>
                             </form>
                         </div>
                     </div>
-            </div>
-        </div>
-    </div>
-	
-
-</main>
+				</div>
+			</div>
+		</div>
+	</main>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
