--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-light navbar-laravel">
     <div class="container">
-    <a class="navbar-brand" href="#">Alumni Data</a>
+    <a class="navbar-brand" href="#">Alumni Data collection hub</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -127,7 +127,7 @@
 			<div class="row justify-content-center">
 				<div class="col-md-8">
 					<div class="card">
-                        <div class="card-header">Fill the details</div>
+                        <div class="card-header">Fill out the following</div>
                         <div class="card-body">
                             <form name="my-form"  action="#" method="post" )">
                                 <div class="form-group row">
