--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="json.html">json</a>
+                <a class="nav-link" href="json.html">Members</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#" onclick="return window.alert('Contact using the whatsapp group,. Thank you.')";">Contact</a>
@@ -288,7 +288,7 @@
 											</div>
 										</div>
 										<div class="col-md-6 offset-md-4">
-											<h7>Click on<a href="json.html"> view JSON</a> to see the raw data</h7>
+											<h7> <a href="json.html">Click</a> to see who else has joined</h7>
 										</div>
 									</form>
 								</div>
