--- a/json.html
+++ b/json.html
@@ -4,14 +4,15 @@
 	<script src="https://www.gstatic.com/firebasejs/5.0.0/firebase.js"></script>
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <title>The Family</title>
   </head>
-  <body class="container">
+  <body>
+	<div class="container">
 		<div class="row justify-content-center">
 			<div class="col-md-8">
 				<div class="shadow-lg p-3 mb-5 bg-white rounded">
@@ -21,8 +22,8 @@
 				<div class="row justify-content-center">
 					<table style="width:90%" id="ex-table" class="table table-striped">
 						<tr id="tr">
-							<th>Name:</th>
-							<th>Batch:</th> 
+							<th>Name</th>
+							<th>Batch</th> 
 					</table> 
 				</div>
 
@@ -60,5 +61,16 @@
 	</div>
 	</div>
 	</div>
+	</div>
+	<footer id="sticky-footer" class="py-4 bg-dark text-white-50">
+    <div class="container text-center">
+      <small>This project is in beta phase. 
+	  If I get enough response and support from you guys, 
+	  more funtionality and features might be added in future. <p>
+	  Please note that I'm not doing this for money, 
+	  in case anyone is wondering. Thank You.</p></small>
+    </div>
+  </footer>
+  
   </body>
 </html>
