--- a/json.html
+++ b/json.html
@@ -13,11 +13,31 @@
   </head>
   <body>
 	<div class="container">
+	<nav class="navbar navbar-expand-lg navbar-light navbar-laravel">
+    <div class="container">
+    <a class="navbar-brand" href="#"><h3><p class="text-primary" >The Family</p></h3></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" 
+			data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" 
+			aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="json.html">Members</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#" onclick="return window.alert('Contact using the whatsapp group,. Thank you.')";">Contact</a>
+            </li>
+        </ul>
+    </div>
+    </div>
+</nav>
+	
 		<div class="row justify-content-center">
 			<div class="col-md-8">
 				<div class="shadow-lg p-3 mb-5 bg-white rounded">
 
-				<h3>The Family</h3>
 				
 				<div class="row justify-content-center">
 					<table style="width:90%" id="ex-table" class="table table-striped">
