--- a/json.html
+++ b/json.html
@@ -15,7 +15,7 @@
 	<div class="container">
 	<nav class="navbar navbar-expand-lg navbar-light navbar-laravel">
     <div class="container">
-    <a class="navbar-brand" href="#"><h3><p class="text-primary" >The Family</p></h3></a>
+    <a class="navbar-brand" href="#"><h3><p class="text-primary" >Alumni Data collection hub</p></h3></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" 
 			data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" 
 			aria-expanded="false" aria-label="Toggle navigation">
@@ -38,6 +38,7 @@
 			<div class="col-md-8">
 				<div class="shadow-lg p-3 mb-5 bg-white rounded">
 
+				<h3>The Family</h3>
 				
 				<div class="row justify-content-center">
 					<table style="width:90%" id="ex-table" class="table table-striped">
