--- a/json.html
+++ b/json.html
@@ -37,16 +37,19 @@
 		<div class="row justify-content-center">
 			<div class="col-md-8">
 				<div class="shadow-lg p-3 mb-5 bg-white rounded">
-
-				<h3>The Family</h3>
-				
-				<div class="row justify-content-center">
-					<table style="width:90%" id="ex-table" class="table table-striped">
-						<tr id="tr">
-							<th>Name</th>
-							<th>Batch</th> 
-					</table> 
-				</div>
+					<div class="card">
+						<div class="card-header">The Family</div>
+							<div class="card-body">				
+								<div class="row justify-content-center">
+									<table style="width:95%" id="ex-table" class="table table-striped">
+										<tr id="tr">
+											<th>Name</th>
+											<th>Batch</th> 
+									</table> 
+								</div>
+							</div>
+						</div>
+					</div>
 
 	<script>
 	  // Initialize Firebase
