--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 										</div>
 										
 										<div class="form-group row">
-											<label for="batch" class="col-md-4 col-form-label text-md-right">Batch</label>
+											<label for="batch" class="col-md-4 col-form-label text-md-right">Batch Year (class 6th)</label>
 											<div class="col-md-6">
 												<input type="text" id="batch" class="form-control" name="batch" placeholder = "Required field">
 											</div>
