--- a/json.html
+++ b/json.html
@@ -41,13 +41,15 @@
 						<div class="card-header">The Family</div>
 							<div class="card-body">				
 								<div class="row justify-content-center">
-									<table style="width:95%" id="ex-table" class="table table-striped">
-										<tr id="tr">
-											<th onclick=sortTable(0)>Name</th>
-											<th onclick=sortTable(1)>Batch</th> 
-											<th onclick=sortTable(2)>Admission Year</th> 
-											<th onclick=sortTable(3)>Leaving year</th> 
-									</table> 
+									<div style="overflow-x:auto;">
+										<table style="width:100%" id="ex-table" class="table table-striped">
+											<tr id="tr">
+												<th onclick=sortTable(0)>Name</th>
+												<th onclick=sortTable(1)>Batch</th> 
+												<th onclick=sortTable(2)>Admission Year</th> 
+												<th onclick=sortTable(3)>Leaving year</th> 
+										</table> 
+									</div>
 								</div>
 							</div>
 						</div>
