--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
         var a = document.forms["my-form"]["full-name"].value;
         var b = document.forms["my-form"]["email-address"].value;
         var ph = document.forms["my-form"]["phone-number"].value;
+		ph=ph.replace(/[&\/\\#, +()$~%.'":*?<>{}]/g, '_');
+		//window.alert(ph);
         var ca = document.forms["my-form"]["present-address"].value;
         var d = document.forms["my-form"]["permanent-address"].value;
         var batch = document.forms["my-form"]["batch"].value;
@@ -176,7 +178,7 @@
 										</div>
 										
 										<div class="form-group row">
-											<label for="batch" class="col-md-4 col-form-label text-md-right">Batch Year (class 6th)</label>
+											<label for="batch" class="col-md-4 col-form-label text-md-right">Batch Year (class 6th) </label>
 											<div class="col-md-6">
 												<input type="text" id="batch" class="form-control" name="batch" placeholder = "Required field">
 											</div>
@@ -214,7 +216,7 @@
 										<div class="form-group row">
 											<label for="phone_number" class="col-md-4 col-form-label text-md-right">Phone Number</label>
 											<div class="col-md-6">
-												<input type="text" id="phone_number" class="form-control" name="phone-number" placeholder = "Required field">
+												<input type="tel" pattern= "[0-9]" id="phone_number" class="form-control" name="phone-number" placeholder = "Required field">
 											</div>
 										</div>
 
@@ -312,5 +314,6 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+
 </body>
 </html>
