--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 										<div class="form-group row">
 											<label for="phone_number" class="col-md-4 col-form-label text-md-right">Phone Number</label>
 											<div class="col-md-6">
-												<input type="tel" pattern= "[0-9]" id="phone_number" class="form-control" name="phone-number" placeholder = "Required field">
+												<input type="tel" pattern= "[0-9]{10}" id="phone_number" class="form-control" name="phone-number" placeholder = "Required field">
 											</div>
 										</div>
 
