--- a/json.html
+++ b/json.html
@@ -27,7 +27,7 @@
                 <a class="nav-link" href="json.html">Members</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#" onclick="return window.alert('Contact using the whatsapp group,. Thank you.')";">Contact</a>
+                <a class="nav-link" href="feedback.html">Feedback</a>
             </li>
         </ul>
     </div>
