--- a/feeds.html
+++ b/feeds.html
@@ -15,7 +15,7 @@
 	<div class="container">
 	<nav class="navbar navbar-expand-lg navbar-light navbar-laravel">
     <div class="container">
-    <a class="navbar-brand" href="#"><h3><p class="text-primary" >Alumni Data collection hub</p></h3></a>
+    <a class="navbar-brand" href="index.html"><h3><p class="text-primary" >Alumni Data collection hub</p></h3></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" 
 			data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" 
 			aria-expanded="false" aria-label="Toggle navigation">
