--- a/feedback.html
+++ b/feedback.html
@@ -84,7 +84,7 @@
 								<a class="nav-link" href="json.html">Members</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="feeds.html">Feedback</a>
+								<a class="nav-link" href="feeds.html">Feedbacks</a>
 								</li>
 								</ul>
 								</div>
