--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 														<div class="col-md-6 offset-md-4">
 															<h7> <a href="json.html">Click</a> to see who else has joined</h7>
 															<p>
-															<h7>Or post a <a href="feedback.html">Feedback</a></h7>
+															<h7><a href="feeds.html">View</a> or post a <a href="feedback.html">Feedback</a></h7>
 															</p>
 														</div>
 													</form>
