--- a/json.html
+++ b/json.html
@@ -37,6 +37,9 @@
 		<div class="row justify-content-center">
 			<div class="col-md-8">
 				<div class="shadow-lg p-3 mb-5 bg-white rounded">
+							<p>
+							<h7><a href="feeds.html">View</a> or post a <a href="feedback.html">Feedback</a></h7>
+							</p>
 					<div class="card">
 						<div class="card-header">The Family <p><small id="count"></small></p></div>
 							<div class="card-body">				
