--- a/feedback.html
+++ b/feedback.html
@@ -134,7 +134,7 @@
 								<div class="col-md-12">
 									<p class="my-0"><h6 class="text-muted my-0">In case your data needs to be updated, 
 									Please mention the field properly, where the info is wrong. Also
-									provide the same phone number as earlier, otherwise, finding the record ends up being tedious. (sorry!)
+									provide the <strong>SAME phone number</strong> as earlier, otherwise, finding the record ends up being tedious. (sorry!)
 									<p>eg: I've entered my NAME incorrectly. I entered xxxx it needs to be yyyy </p></h6>
 									<p class="text-muted my-0">Your phone number will be hidden</p></p>
 								</div>
