--- a/json.html
+++ b/json.html
@@ -9,6 +9,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+	<script src="tested.js"></script>
     <title>The Family</title>
   </head>
   <body>
@@ -60,17 +61,6 @@
 					</div>
 
 	<script>
-	  // Initialize Firebase
-	  var firebaseConfig = {
-	    apiKey: "AIzaSyDf1aKSTPybfBWeYjIxteChNHpiPReFzkE",
-	    authDomain: "jnvalumnidata-668d8.firebaseapp.com",
-	    databaseURL: "https://jnvalumnidata-668d8.firebaseio.com",
-	    projectId: "jnvalumnidata-668d8",
-	    storageBucket: "jnvalumnidata-668d8.appspot.com",
-	   messagingSenderId: "1074641169948",
-	    appId: "1:1074641169948:web:6b04abd3fd655744deb9d9"
-	  };
-	  firebase.initializeApp(firebaseConfig);
 		
 	   var database = firebase.database();
 	   var count=0;
