--- a/feeds.html
+++ b/feeds.html
@@ -9,6 +9,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+	<script src="tested.js"></script>
     <title>Feedback</title>
   </head>
   <body>
@@ -56,18 +57,6 @@
 		</div>
 	</div>
 	<script>
-	  // Initialize Firebase
-	  var firebaseConfig = {
-	    apiKey: "AIzaSyDf1aKSTPybfBWeYjIxteChNHpiPReFzkE",
-	    authDomain: "jnvalumnidata-668d8.firebaseapp.com",
-	    databaseURL: "https://jnvalumnidata-668d8.firebaseio.com",
-	    projectId: "jnvalumnidata-668d8",
-	    storageBucket: "jnvalumnidata-668d8.appspot.com",
-	   messagingSenderId: "1074641169948",
-	    appId: "1:1074641169948:web:6b04abd3fd655744deb9d9"
-	  };
-	  firebase.initializeApp(firebaseConfig);
-		
 	   var database = firebase.database();
 	   var count=0;
     database.ref("/feedback").orderByChild("t").once('value', function(snapshot){
@@ -78,7 +67,7 @@
 				count++;
                 var pval = data.val();
 				//var child = pval.val();
-				console.log(pval);
+				//console.log(pval);
                 content +='<tr>';
                 content += "<td><div class=' card shadow-sm p-3 mb-5 bg-white rounded'><div class='card-body my-0'><blockquote class='blockquote my-0'><p ><h6 class='text-wrap text-justify text-break'>" 
 				+ pval.message +
